# Nexus-Bot

./: LICENSE  README.md  index.py  pyproject.toml  requirements.txt  setup.py  squarecloud.app
NexusBOT/eventos/: eventos.py
NexusBOT/traductor/: traductor.py
bot_commands/: basicCommands.py  commands.py
commands/: commands.py
eventos/: eventos.py
src/: index.py
src/app/: bot_config.py
src/app/enviroments/: connection.py
src/app/environments/: connection.py  logging.py  utils.py
src/app/modules/bot_commands/: basicCommands.py  facts.py  news.py  traductorCommand.py  weather.py
src/app/modules/bot_commands/translatorCommands/: setLanguage.py  setLanguaje.py  translate.py
src/app/modules/traductor/: traductor.py
traductor/: traductor.py
