[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Nexus Bot"
version = "0.1.0"
description = "Nexus Bot en desarrollo"
authors = ["ArturoTF <arturotroyano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-cord = "^2.0.0b1"
pandas = "^2.0.2"
googletrans = "^4.0.0-rc1"
google-cloud-translate = "^1.3.1"
google-cloud-texttospeech = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
